修改部分提交

--- a/事件参数传递.html
+++ b/事件参数传递.html
@@ -19,7 +19,7 @@
         },
         methods:{
             con(t){
-                this.count=t
+                this.count=ts
             }
         }
     })
