最终修改版

--- a/v-bind.html
+++ b/v-bind.html
@@ -20,7 +20,7 @@
     new Vue({
         el: "#add",
         data: {
-            name:"蜡笔小新",
+            name:"小新",
             showcss:false
             ,
             scr:"https://dss1.bdstatic.com/70cFvXSh_Q1YnxGkpoWK1HF6hhy/it/u=2771978851,2906984932&fm=26&gp=0.jpg"
