--- a/v-show.html
+++ b/v-show.html
@@ -16,11 +16,11 @@
         el: "#add",
         data: {
             msg:"上课一定好好听课",
-            shg:true
+            shg:falsa
         },
         methods:{
             sh(){
-                this.shg=!this.shg
+                this.shg=!this.shg:
             }
         }
     })
