最终最终修改版

--- a/v-text.html
+++ b/v-text.html
@@ -15,7 +15,7 @@
     new Vue({
         el: "#add",
         data: {
-            msg:"hello vue"
+            msg:"hello vue",
         },
     })
 </script>
