--- a/留言板.html
+++ b/留言板.html
@@ -30,7 +30,7 @@
                 if (this.msg){
                 // this.notebook.push(this.msg)
                 this.notebook.unshift(this.msg)
-                this.msg=""
+                this.msg="",
             }},
             dels(key){
                 console.log(key);
