--- a/留言板.html
+++ b/留言板.html
@@ -28,9 +28,9 @@
         methods:{
             book(){
                 if (this.msg){
-                // this.notebook.push(this.msg)
-                this.notebook.unshift(this.msg)
-                this.msg="",
+                // this.notebook.push(this.msg),
+                this.notebook.unshift(this.msg),
+                this.msg=""
             }},
             dels(key){
                 console.log(key);
