--- a/计算属性.html
+++ b/计算属性.html
@@ -26,7 +26,7 @@
         },
         methods:{
             lows(){
-                this.num -=3
+                this.num -=3,
             },
         },
         computed:{
