--- a/v-if.html
+++ b/v-if.html
@@ -16,7 +16,7 @@
     new Vue({
         el: "#add",
         data: {
-            isshow:true
+            isshow:falsa
         },
         methods:{
             ifs(){
